--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="chat-container">
-  <div class="message-container" *ngIf="contents.length === 0">
+  <div class="message-container" *ngIf="messages.length === 0">
     <p class="message">
       Welcome to your Ollama App <br />
       Write a text to start.
